# projective-geometry-basics

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
examples/2 Panorama Stitching/: README.md
examples/3 Camera Projection Model/: README.md
include/algorithms/: calibration.hpp  chessboard_detector.hpp  frame_selector.hpp
include/camera/: camera.hpp  camera_device.hpp  camera_extrinsics.hpp  camera_intrinsics.hpp  distortion_coefficients.hpp  frame.hpp  image_directory.hpp  libcamera_camera.hpp  mapped_frame.hpp  projection.hpp  rotation.hpp  video_source.hpp
include/core/: constants.hpp  mat.h  mat.hpp  vec.h  vec.hpp
include/geometry/: operations.h  operations.hpp  types.h  types.hpp
include/projective/: homography.h  homography.hpp  homography_estimation.hpp
include/transform/: transform2d.h  transform2d.hpp
src/: calibration.cpp  camera_device.cpp  camera_projection.cpp  chessboard_detector.cpp  frame_selector.cpp  geometry.cpp  geometry.h  homography.cpp  homography_estimation.cpp  image_directory.cpp  libcamera_camera.cpp  main.cpp  mapped_frame.cpp  matrix.cpp  matrix.h  operations.cpp  rotation.cpp  transform2d.cpp  video_source.cpp
tests/: CMakeLists.txt  test_camera_projection.cpp  test_geometry.cpp  test_homography.cpp  test_homography_estimation.cpp  test_transform.cpp
viz/: visualize.cpp  visualize_camera.cpp  visualize_camera_calibration.cpp  visualize_camera_device.cpp  visualize_geometry.cpp  visualize_panorama.cpp
